fix(backlog): fix estimation by role header overflow & row slot

--- a/app/styles/modules/backlog/backlog-table.scss
+++ b/app/styles/modules/backlog/backlog-table.scss
@@ -53,9 +53,14 @@
             align-items: center;
             display: flex;
             flex-grow: 0;
-            justify-content: flex-end;
+            justify-content: center;
             margin-left: 20px;
-            width: 125px;
+            width: 75px;
+
+            .inner {
+                align-items: center;
+                display: flex;
+            }
 
             tg-svg {
                 margin-left: .2rem;
@@ -180,6 +185,9 @@
         display: -webkit-box;
         -webkit-line-clamp: 2;
         overflow: hidden;
+        overflow-wrap: break-word;
+        text-align: right;
+        width: 55px;
         /* stylelint-enable property-no-vendor-prefix, value-no-vendor-prefix */
     }
 }
@@ -222,7 +230,15 @@
     }
     .new {
         animation: new-us-blink .5s ease-in 2;
+    }
+    .points-value {
+        background-color: $color-gray200;
+        color: $color-black900;
+        padding: .25rem;
 
+        span {
+            color: $color-link-tertiary;
+        }
     }
 }
 
